--- a/index.htm
+++ b/index.htm
@@ -72,7 +72,9 @@ https://gitee.com/atzlinux/debian-cn/tree/apt-install/
 对本项目的任何意见和建议，欢迎用如下任一方式联系。
 <ul>
 	<li>邮箱：<a href="mailto:atzlinux@yeah.net" >atzlinux@yeah.net</a></li>
-	<li>微信：atzlinux</li>
+	<li>微信：
+	<a href="./img/wechat-debian-cn.png" target="_blank" >	
+	atzlinux</a></li>
 	<li>QQ： <a href="https://user.qzone.qq.com/909868357/main" target="_blank" >909868357</a></li>
 </ul>
 <p>
