增加卸载说明

--- a/index.htm
+++ b/index.htm
@@ -61,6 +61,10 @@ apt upgrade
 <a href="http://118.24.9.73/debian/download/changelog.txt" target="_blank">
 项目更新日志</a>
 
+<h3>卸载</h3>
+<a href="https://gitee.com/atzlinux/debian-cn/blob/apt-install/uninstall-all-apt.sh" target="_blank">
+请在此处下载卸载脚本执行</a>
+
 <h2>项目开发</h2>
 本项目遵循 GPL3.0 协议,项目源代码地址：
 <p>
