确保和 Debian 兼容

--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 <a href="https://www.debian.org" target="_blank">
 Debian</a> 是一款非常优秀的 Linux 操作系统，但默认安装缺少中国人常用的软件。
 本项目的目的是收集这些常用软件，利用自动化脚本在 Debian 上一键安装，节省大家定制 Debian 的时间。
-<br>本项目同时承诺 100% 和 Debian 稳定版兼容。
+<br>本项目同时承诺 100% 和 Debian 兼容。
 </p>
 目前收录的中文软件包如下：
 <ul>
