首页增加屏幕截屏图片

--- a/index.htm
+++ b/index.htm
@@ -62,6 +62,12 @@ apt upgrade
 <a href="http://118.24.9.73/debian/download/changelog.txt" target="_blank">
 项目更新日志</a>
 
+<h3>桌面截屏</h3>
+安装完成后，各个软件在同一个屏幕展示的截屏如下：
+<p>
+<img src="http://debian-cn.lilishare.com/debian/img/jieping.png" alt="屏幕截屏">
+</p>
+
 <h3>卸载</h3>
 <a href="https://gitee.com/atzlinux/debian-cn/blob/apt-install/uninstall-all-apt.sh" target="_blank">
 请在此处下载卸载脚本执行</a>
