--- a/www/index.htm
+++ b/www/index.htm
@@ -74,14 +74,13 @@ dd if=debian-10-amd64-i386-DVD-1.iso of=/dev/sdb bs=8M
 注：
 不同机器开机进入 BIOS 设置的按键不一样，一般在开机屏幕时有提示。有按 Delete 键进入，也有按 F2 键……
 <br>
-如果开机屏幕没有提示，最好查下主板说明书，或者上网查询、咨询机器厂家。
+如果开机屏幕没有提示，建议查下主板说明书，或者上网查询、咨询机器厂家。
 </p>
 
 <h3>安装过程</h3>
 本 iso 文件的安装过程，已经进行了大量自动化定制，节省安装过程的手工输入。
 
 安装过程中，需要人工输入的信息如下：
-<ol></ol>
 <ol>
 	<li>如果是用 WiFi 连接网络，需要输入选择使用哪个 WiFi，并输入WiFi 密码。</li>
 	如果是网线接入，这个步骤省略。
@@ -90,14 +89,15 @@ dd if=debian-10-amd64-i386-DVD-1.iso of=/dev/sdb bs=8M
 	对于新电脑，建议使用整个硬盘空间；
 	<br>
 	对于机器上已有其它操作系统，需要多系统共存，请务必小心操作，在重新调整分区前，需要确认已有分区和 Linux 分区设备名的对应关系，不建议新手操作安装多系统。
-
+</ol>
 <h3>用户登录</h3>
 安装完成后，机器会自动重启进入新系统用户名密码输入提示界面。
 <ul>
+	<li>用户登录时，可以在右上角选择登录环境，目前支持 xfce，MATE，gnome 三种桌面环境。</li>	
 	<li>root 用户可以直接登录系统，密码为：  <i>debian-cn;168</i></li>
 	<li>普通用户名为： <b>wo</b> ，密码为：  <i>debian168;</i></li>
 	<li>请登录机器后，在终端命令行用 passwd 命令及时修改密码。</li>
-	<li>用户登录时，可以在右上角选择登录环境，目前支持 xfce，MATE，gnome 三种桌面环境。</li>	
+	
 </ul>
 
 <h3>网络</h3>
