补充蓝牙、苹果手机内容

--- a/www/index.htm
+++ b/www/index.htm
@@ -44,6 +44,12 @@ http://118.24.9.73/debian-cd/current/amd64/iso-dvd/debian-10-amd64-DVD-1.iso</a>
 http://debian-cn.lilishare.com/debian-cd/current/amd64/iso-dvd/debian-10-amd64-DVD-1.iso</a>	
 </ul>
 该 iso 安装文件，支持目前国内市场上常用的 64 位 CPU。
+除操作系统常用功能外，还
+支持蓝牙网络热点接入，可以把手机 4G 网络通过蓝牙让电脑共享；
+支持蓝牙音频源，可以把手机声音输出设置为电脑音箱。
+支持 iPhone 手机通过数据线连接到电脑，拷贝手机上的照片到电脑。
+支持部分型号摄像头，可用名为"茄子"的软件打开摄像头进行拍照和录视频。
+
  
 <h2>安装</h2>
 
