调整商标声明格式

--- a/index.htm
+++ b/index.htm
@@ -94,10 +94,10 @@ https://gitee.com/atzlinux/debian-cn/tree/apt-install/
 <p>本项目基于开源软件和各个厂家的商业软件集成，对使用此项目的造成任何问题和损失，本人和本项目以及参与该项目的任何人，均不承担任何赔偿责任。<br>
 本项目基于 Debian ，但不属于 Debian 官方。本项目的任何问题，均与 Debian 官方项目无关。</p>
 <p>
-<a href="https://www.debian.org/trademark" target="_blank"> 
-Debian 是 Software in the Public Interest, Inc. 的注册商标。本项目与 Debian 官方组织没有任何关系。
-Debian is a registered trademark owned by Software in the Public Interest, Inc.
-</a>
+Debian 是 Software in the Public Interest, Inc. 的注册商标。
+<br>
+<a href="https://www.debian.org/trademark" target="_blank">Debian is a registered trademark owned by Software in the Public Interest, Inc.</a>
+<br>本项目与 Debian 官方组织没有任何关系。
 </p>
 <p><a href="http://bluefish.openoffice.nl/" target="_blank">Made with Bluefish HTML editor.</a></p>
 </body>
