qq 使用全角字符

--- a/index.htm
+++ b/index.htm
@@ -84,7 +84,7 @@ https://gitee.com/atzlinux/debian-cn/tree/apt-install/
 <ul>
 	<li>邮箱：<a href="mailto:atzlinux@yeah.net" >atzlinux@yeah.net</a></li>
 	<li>微信：<a href="./img/wechat-debian-cn.png" target="_blank" >atzlinux</a></li>
-	<li>QQ： <a href="https://user.qzone.qq.com/909868357/main" target="_blank" >909868357</a></li>
+	<li>ＱＱ：<a href="https://user.qzone.qq.com/909868357/main" target="_blank" >909868357</a></li>
 </ul>
 <p>
 欢迎访问项目：<a href="https://gitee.com/atzlinux/debian-cn/tree/apt-install/" target="_blank">
